# brick-by-brick

./: .gitignore  CASE_STUDY.md  LICENSE  README.md  README.pt-br.md  ROADMAP.md  USAGE.md  business_analysis.md  main.py  pyproject.toml  requirements.txt
brick_by_brick/: arquivo_bobo.py
contributing/: en.md  pt-br.md
src/: config.py
src/analysis/: backtest.py  indicadores.py  screener.py
src/collectors/: b3_cotahist.py  bcb_series.py  cvm_cadastro.py  cvm_inf_diario.py  cvm_inf_mensal.py  fundosnet.py
src/portfolio/: alertas.py  carteira.py  enrich.py  grupamentos.py  relatorio.py
src/storage/: database.py
tests/: test_arquivo_bobo.py
